<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/shape_dialog"
            android:backgroundTint="@color/game_color">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/success"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginBottom="12dp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageDialog"
                android:layout_marginVertical="8dp"
                android:src="@drawable/ic_launcher_background"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/playerName"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:id="@+id/highestScore"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:id="@+id/score"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:weightSum="3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/exit"
                    android:gravity="center"
                    android:background="@drawable/shape_button"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:textStyle="bold"
                    android:layout_margin="4dp"
                    android:id="@+id/okBtn"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/play_again"
                    android:gravity="center"
                    android:background="@drawable/shape_button"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:textStyle="bold"
                    android:layout_margin="4dp"
                    android:id="@+id/replay"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_weight="1"
                        android:text="@string/continue_text"
                        android:gravity="center"
                        android:background="@drawable/shape_button"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:textStyle="bold"
                        android:layout_margin="4dp"
                        android:id="@+id/resume"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ads"
                        android:textColor="@color/black"
                        android:paddingHorizontal="1dp"
                        android:textSize="@dimen/_6sdp"
                        android:background="@drawable/shape_ads"
                        android:fontFamily="@font/poppins_medium"
                        app:layout_constraintTop_toTopOf="@id/resume"
                        app:layout_constraintEnd_toEndOf="@id/resume"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>
