<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/game_color"
        android:padding="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textSize="24sp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:textColor="@color/app_38"/>
            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/baseline_keyboard_backspace_24"
                android:padding="@dimen/_2sdp"
                android:id="@+id/closeNavigation"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/shape_button_setting"
            android:id="@+id/displaySetting">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/soundCheck">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/soundImg"
                    android:src="@drawable/icon_sound"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/sound"
                    android:paddingHorizontal="12dp"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@color/app_38"
                    android:layout_marginHorizontal="12dp"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/soundSwitch"
                    android:thumb="@drawable/app_icon"
                    android:trackTint="@color/game_color"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/shape_button_setting"
            android:layout_marginTop="12dp"
            android:id="@+id/gameSetting">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/playerSpeed">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/speedImg"
                    android:src="@drawable/icon_speed"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/speed"
                    android:paddingHorizontal="12dp"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@color/app_38"
                    android:layout_marginHorizontal="12dp"/>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:max="100"
                    android:id="@+id/speedSeekBar"
                    android:progressTint="@color/game_color"
                    android:thumb="@drawable/app_icon"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/shape_button_setting"
            android:layout_marginTop="12dp"
            android:id="@+id/levelSettings">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/level">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/levelImg"
                    android:src="@drawable/icon_level"
                    />
                <TextView
                    android:id="@+id/levelText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/normal"
                    android:paddingHorizontal="12dp"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@color/app_38"
                    android:layout_marginHorizontal="12dp"/>
                <com.haiprj.haigame.wukongfly.ui.widget.LevelSeekbar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:id="@+id/levelSeekbar"
                    android:progressTint="@color/game_color"
                    android:thumb="@drawable/app_icon"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone"
            android:background="@drawable/shape_button_setting"
            android:layout_marginTop="12dp"
            android:id="@+id/playerColorPicker">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvColorPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                tools:listitem="@layout/layout_color"/>
        </LinearLayout>
    </LinearLayout>
</layout>
